--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -9,6 +9,25 @@
     font-size: 42px !important;
 } 
 
+.table-section{
+    /* width: 1030px;
+    overflow: scroll; */
+}
+.table-section tbody td{
+    text-align: center;
+    font-size: 12px;
+    padding: 10px 0px;
+}
+.table-section thead th{
+    white-space: nowrap;
+    font-size: 12px;
+    font-weight: 300;
+    padding: 10px 24px;
+    border-right: 1px solid #DBDBDB;
+}
+
+
+
 .table-body-set label{
     position: relative;
     top: -2px;
@@ -20,9 +39,50 @@
     width: 12px;
 }
 
+.first-btn{
+    border-radius: 10px;
+    border: 1px solid #8A25B0;
+    height: 44px;
+    padding: 0px 20px;
+    color: #8A25B0;
+    transition: all 0.3s linear;
+}
+.first-btn:hover{
+    background: #8A25B0;
+    color: white;
+}
+.second-btn{
+    border-radius: 10px;
+    background:  #8A25B0;
+    padding: 0px 20px;
+    color: white;
+    height: 44px;
+    transition: all 0.3s linear;
+    border: 1px solid #8A25B0;
+
+    
+}
+.second-btn:hover{
+    background: none;
+    border: 1px solid #8A25B0;
+    color: #8A25B0;;
+
+}
+
 *{
     font-family: 'Poppins';}
 
+
+    
+.tab-section .react-tabs .react-tabs__tab--selected{
+    border-bottom: 1px solid #511992;
+
+}
+
+    
+.tab-section .react-tabs{
+    cursor: pointer;
+}
 .tab-section .react-tabs .react-tabs__tab--selected:focus-visible{
     outline: none;
     border-bottom: 1px solid #511992;
@@ -53,4 +113,17 @@
     .search-icon{
         top: 15px;
     }
+}
+
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
