--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -59,6 +59,7 @@
     height: 44px;
     transition: all 0.3s linear;
     border: 1px solid #8A25B0;
+    white-space: nowrap;
 
     
 }
@@ -75,7 +76,7 @@
 
     
 .tab-section .react-tabs .react-tabs__tab--selected{
-    border-bottom: 1px solid #511992;
+    border-bottom: 1px solid #511992 !important;
 
 }
 
@@ -98,7 +99,22 @@
     height: 4px;
     display: none;
 }
-                    
+    
+.table-timing tbody tr::-webkit-scrollbar {
+    width: 4px;
+    height: 10px;
+  }
+/* 
+  .table-timing tbody tr:hover td{
+    background: red;
+  } */
+
+ .table-timing tbody tr::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+    
+
 .tab-section .react-tabs ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3); 
     border-radius: 10px;
@@ -127,3 +143,130 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+input[type=radio]{
+        accent-color: #8A25B0;
+   }
+
+
+.table-timing tbody tr td{
+    padding: 5px 0px;
+    font-size: 13px;
+   }
+
+   .modal-field{
+    height: 400px;
+    overflow: scroll;
+   }
+
+   /* .fixed-tab-section .react-tabs__tab--selected input{
+        accent-color: red;
+   } */
+   
+.tabs-attendance .react-tabs .react-tabs__tab--selected{
+    border-radius: 10px;
+     padding: 0px 20px;
+    color: white;
+    height: 44px;
+    transition: all 0.3s linear;
+    border: 1px solid #8A25B0;
+    white-space: nowrap;
+    display: flex;
+    background: white !important;
+    color: #8A25B0 !important;
+}
+
+.tabs-attendance .react-tabs .react-tabs__tab{
+    border-radius: 10px;
+    background: #8A25B0;
+    padding: 0px 20px;
+    color: white;
+    height: 44px;
+    transition: all 0.3s linear;
+    border: 1px solid #8A25B0;
+    white-space: nowrap;
+    display: flex;
+}
+.add-icon{
+    /* font-size: 16px !important; */
+}
+
+.arrow-icon{
+    font-weight: 500;
+}
+.field-modal{
+    height: 100% !important;
+}
+.sidelinks .active{
+    background-color: #f0f8fd;
+    border-radius: 10px;
+    color: #8a25b0;
+}
+
+.edit-sidebar{
+    transition: all 0.3s linear;
+}
+.toggle-btn-side{
+    display: none;
+}
+.close-icon{
+    display: none !important; 
+    transition: all 0.3s linear;
+}
+.editsidebar .close-icon{
+    display: block !important;
+}
+.editsidebar .menu-icon{
+    display: none;
+    transition: all 0.3s linear;
+}
+
+@media screen and (max-width:1280px){
+    .edit-sidebar{
+        left: -300px;
+        
+    }
+    .toggle-btn-side{
+        display: block;
+    }
+
+    .editsidebar .edit-sidebar{
+        left: 0px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+   @media(max-width:576px){
+    .first-btn{
+        height: 35px;
+        padding: 0px 10px;
+        font-size: 10px;
+    }
+    .second-btn{
+        height: 35px;
+        padding: 0px 10px;
+        font-size: 10px;
+    }
+   }
