--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -106,10 +106,14 @@
     font-size: 16px !important;
 }
 .five-hour{
-    color: #0094ff;
+    color: #8a25b0;
 }
 .five-hour1{
     color: #000;
+}
+.tablehead{
+    border: 1px solid #e5e7eb;
+    background: white;
 }
 @media(max-width:640px){
     .late-main{
