--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -111,6 +111,9 @@
 .five-hour1{
     color: #000;
 }
+.newone-btn{
+    padding: 6px 13px;
+}
 @media(max-width:640px){
     .late-main{
         padding: 2px;
