--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -114,9 +114,43 @@
 .view-not{
     padding: 0;
 }
+.del-icon2{
+    color: red;
+}
+.edit-icon2{
+    color: red;
+}
 .customer-adoble{
     margin-bottom: 30px !important;
 }
+.edit-icon{
+    font-size: 18px;
+}
+.interview-card{
+    box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.3);
+    transition: all 0.3s linear;
+  
+}
+.interview-card:hover{
+   transform: translateY(-6px);
+}
+.bg-label-success{
+    background-color: #e8fadf !important;
+    color: #71dd37 !important;
+}
+.bg-label-success:focus {
+    border-color: #e8fadf !important;
+}
+.bg-label-warning{
+    background-color: #fff2d6 !important;
+    color: #ffab00 !important;
+
+}
+.bg-label-danger{
+    background-color: #ffe0db !important;
+    color: #ff3e1d !important;
+}
+
 .operational{
     width: 20px;
     height: 20px;
