--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -41,32 +41,32 @@
 
 .first-btn{
     border-radius: 10px;
-    border: 1px solid #8A25B0;
+    border: 1px solid #27004a;
     height: 44px;
     padding: 0px 20px;
-    color: #8A25B0;
+    color: #27004a;
     transition: all 0.3s linear;
 }
 .first-btn:hover{
-    background: #8A25B0;
+    background: #27004a;
     color: white;
 }
 .second-btn{
     border-radius: 10px;
-    background:  #8A25B0;
+    background:  #27004a;
     padding: 0px 20px;
     color: white;
     height: 44px;
     transition: all 0.3s linear;
-    border: 1px solid #8A25B0;
+    border: 1px solid #27004a  ;
     white-space: nowrap;
 
     
 }
 .second-btn:hover{
     background: none;
-    border: 1px solid #8A25B0;
-    color: #8A25B0;;
+    border: 1px solid #27004a;
+    color: #27004a;;
 
 }
 
@@ -124,6 +124,40 @@
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
+
+@media screen and (max-width:992px){
+    .sidebar {
+         left: -300px;
+        position: absolute;
+        top: 63px;
+        border-radius: 0px 10px 10px 0px;
+    }
+    .custom-body-class .sidebar{
+        left: 0 !important;
+        z-index: 999 !important;
+    }
+}
+
+.sidebar{
+    transition: all 0.3s linear;
+}
+
+.custom-body-class .sidebar{
+    left: -300px;
+    z-index: -1111;
+    position: absolute;
+}
+
+ .cancel-icon{
+    display: none !important;
+ }
+ .custom-body-class .cancel-icon{
+    display: block !important;
+ }
+ .custom-body-class .menu-icon{
+    display: none;
+ }
+ 
 
 @media screen and (max-width:576px){
     .search-icon{
@@ -289,6 +323,32 @@ input[type=radio]{
     display: block;
     height: 100%;
 }
+.weekly-table tbody tr td{
+    width: 150px;
+    border-right: 1px solid #dfd1d1;
+
+}
+.set-shadow{
+    box-shadow: 0px 1px 4px 0px rgba(10,1,10,0.16);
+}
+.arrow-icon-sidebar{
+    font-size: 14px !important;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media screen and (max-width:1280px){
     .edit-sidebar{
         left: -300px;
