--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -460,7 +460,9 @@ input[type=radio]{
     color: white;
 }
 
-
+.arrow-down{
+    font-size: 14px !important;
+}
 
 
 @media screen and (max-width:768px){
