--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -76,10 +76,13 @@
 
     
 .tab-section .react-tabs .react-tabs__tab--selected{
-    border-bottom: 1px solid #511992 !important;
-
+    border-bottom: 1px solid #27004a !important;
+    background: #27004a;
+    border-radius: 7px;
 }
-
+.tab-section .react-tabs .react-tabs__tab--selected h2{
+    color: white;
+}
     
 .tab-section .react-tabs{
     cursor: pointer;
@@ -88,11 +91,12 @@
 .tab-section .react-tabs .react-tabs__tab--selected:focus-visible{
     outline: none;
     border-bottom: 1px solid #511992;
-    padding-bottom: 10px;
+    padding-bottom: 0px;
 }
 .tab-section .react-tabs .react-tabs__tab{
     border-bottom: 1px solid transparent;
-    padding-bottom: 10px;
+    padding-bottom: 0px;
+    padding: 10px;
 
 }
 .tab-section .react-tabs ::-webkit-scrollbar {
@@ -126,13 +130,21 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 
+
+.sheet-icon{
+    color: white;
+    background: #27004a;
+    border-radius: 5px;
+    padding: 3px;
+}
+
 @media screen and (max-width:992px){
     .sidebar {
          left: -300px;
         position: absolute;
         top: 63px;
         border-radius: 0px 10px 10px 0px;
-    }
+     }
     .custom-body-class .sidebar{
         left: 0 !important;
         z-index: 999 !important;
@@ -142,6 +154,8 @@
 
 .sidebar{
     transition: all 0.3s linear;
+    height: auto;
+    min-height: 100vh;
 }
 /* .set-z{
     z-index:-1;
@@ -468,7 +482,9 @@ input[type=radio]{
     font-size: 20px !important;
     margin-left: 10px;
 }
-
+.upload-icon{
+    font-size: 20px;
+}
 .warning-icon{
     animation: moveup 3s linear  infinite alternate ;
     font-size: 36px !important;
@@ -499,7 +515,9 @@ input[type=radio]{
     }
     .second-btn{
         height: 35px;
-        padding: 0px 10px;
-        font-size: 10px;
+        padding: 13px 24px;
+        font-size: 12px;
+        display: flex;
+        align-items: center;
     }
    }
