--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -96,9 +96,14 @@
 .tab-section .react-tabs .react-tabs__tab{
     border-bottom: 1px solid transparent;
     padding-bottom: 0px;
-    padding: 10px;
+    padding: 10px 6px 7px 6px;
 
 }
+.payroll-menus .react-tabs__tab{
+    padding: 7px 6px 7px 6px !important;
+
+}
+ 
 .tab-section .react-tabs ::-webkit-scrollbar {
     width: 2px;
     height: 4px;
@@ -137,6 +142,16 @@
     border-radius: 5px;
     padding: 3px;
 }
+.get-icon{
+    transition: all 0.3s linear !important;
+}
+.staff-icon{
+    color: #b1b1b1;
+    height: 20px;
+}
+.react-tabs__tab--selected .staff-icon{
+    color: white !important;
+}
 
 @media screen and (max-width:992px){
     .sidebar {
@@ -156,7 +171,16 @@
     transition: all 0.3s linear;
     height: auto;
     min-height: 100vh;
+    left: -100%;
 }
+
+.custom-body-class .admin-sidebar-set{
+    width: 100%;
+}
+.custom-body-class .navbar{
+    padding-left: 10px;
+}
+
 /* .set-z{
     z-index:-1;
 } */
