--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -21,12 +21,15 @@
 .table-section thead th{
     white-space: nowrap;
     font-size: 12px;
-    font-weight: 300;
+    font-weight: 500;
     padding: 10px 24px;
-    border-right: 1px solid #DBDBDB;
+    /* border-right: 1px solid #DBDBDB; */
+    background: #ededed !important;
 }
-
-
+.table-section 
+table{
+    border-collapse: unset;
+}
 
 .table-body-set label{
     position: relative;
