add file edit-task-status

--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -384,12 +384,27 @@ input[type=radio]{
 .arrow-icon-sidebar{
     font-size: 14px !important;
 }
+.new-shadow{
+    box-shadow: 0px 0px 5px #d0d0d0;
+}
 
 
 
 
-
-
+.table-status thead th{
+    white-space: nowrap;
+    font-weight: 500;
+    font-size: 12px;
+}
+.table-status tbody td{
+    white-space: nowrap;
+    font-size: 14px;
+    padding: 4px;
+    text-align: center;
+}
+.main-table-status{
+    overflow: scroll;
+}
 
 
 
