task complete pages

--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -50,7 +50,8 @@
     font-size: 16px !important;
 }
 .new-menubook{
-    border: 1px solid blue !important;
+    border: 1px solid #27004a !important;
+    color: #27004a !important;
 }
 .designer-bot{
     border-bottom: 1px solid #e4e4e4;
@@ -113,8 +114,13 @@
     font-size: 16px !important;
 }
 .five-hour{
-    color: #8a25b0;
+    color: #27004a;
 }
+.new-worth thead th {
+    background: none !important;
+    border-right: 1px solid #dbdbdb;
+}
+
 .five-hour1{
     color: #000;
 }
@@ -167,8 +173,8 @@
     width: 20px;
     height: 20px;
     display: inline-flex;
-    background: #8a25b099;
-    border: 1px solid #8a25b0;
+    background: #27004a;
+    border: 1px solid #27004a;
     border-radius: 6px;
 }
 .newone-btn{
