--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -150,10 +150,14 @@
   
 }
 .newsidebar-icon{
-    font-size: 20px !important;
+    font-size: 18px !important;
+    margin-left: 10px;
 }
 .interview-card:hover{
    transform: translateY(-6px);
+}
+.setwer{
+    font-size: 10px !important;
 }
 .react-responsive-modal-modal{
     width: 550px;
