some pages crm ui created

--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -159,6 +159,11 @@
 .setwer{
     font-size: 10px !important;
 }
+.salary-detail-setup{
+    height: 36px;
+    width: 160px;
+    font-size: 14px;
+}
 .react-responsive-modal-modal{
     width: 550px;
     border-radius: 10px;
@@ -243,6 +248,9 @@
 .quill{
     box-shadow: 0 0 5px #cfcfcf;
     border-radius: 10px;
+}
+.circle-tu{
+    color: blue;
 }
 .active-set2{
     color: white;
