ui updated navbar

--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -252,6 +252,14 @@
 .circle-tu{
     color: blue;
 }
+/* .tblogout{
+    color:white !important;
+}
+
+ .logoutw .tblogout:hover{
+    color:red !important;
+
+ } */
 .active-set2{
     color: white;
 }
