--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -97,6 +97,9 @@
     font-size: 18px !important;
 
 }
+.addicon-all{
+    font-size: 18px !important;
+}
 .container{
     padding: 0;
 }
@@ -107,8 +110,12 @@
     border-bottom: 1px solid #ebf1f5;
     padding-bottom:30px;
 }
+.newsetup-tab :hover{
+    transition: all 0.5s linear ;
+
+}
 .newadd{
-    font-size: 14px !important;
+    font-size: 18px !important;
 }
 .newadd2{
     font-size: 16px !important;
@@ -495,6 +502,7 @@
     .import-customers{
         flex-direction: column;
     }
+  
     .client-add{
         width: 100%;
     }
