--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html, body {
+   margin: 0;
+   padding: 0;
+   width: 100%;
+   height: 100%;
+   box-sizing: border-box;
+   overflow-x: hidden;
+ }
