--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -23,7 +23,7 @@
     font-size: 12px;
     font-weight: 500;
     padding: 10px 24px;
-    /* border-right: 1px solid #DBDBDB; */
+    border-right: 1px solid #fff;
     background: #fff !important;
 }
 .table-section 
@@ -174,11 +174,14 @@ table{
     transition: all 0.3s linear;
     height: auto;
     min-height: 100vh;
-    left: -100%;
+    left: 0;
+    position: relative;
 }
 
 .custom-body-class .admin-sidebar-set{
     width: 100% !important;
+    /* transition: all 0.3s linear; */
+    /* transition-delay: 5s; */
 }
 .custom-body-class .navbar{
     padding-left: 10px;
@@ -193,7 +196,7 @@ table{
 
 .custom-body-class .sidebar{
     left: -300px;
-    z-index: -1111;
+    z-index: 999;
     position: absolute;
     
 }
@@ -613,3 +616,15 @@ input[type=radio]{
     background:  none !important;
 }
 
+
+   @media(max-width:992px){
+    .sidebar{
+        left: -100%;
+        z-index: 99;
+    }
+    .admin-sidebar-set{
+        width: 100%;
+        position: absolute;
+    }
+   }
+ 
