sidebar,reviewfine,taskform, sidebarEditstaff page

--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -1,24 +1,26 @@
-.search-icon{
+.search-icon {
     font-size: 17px !important;
     top: 12px;
-    position: absolute
-    ;
+    position: absolute;
 }
-.refresh{
+
+.refresh {
     padding: 9px;
     font-size: 42px !important;
-} 
+}
 
-.table-section{
+.table-section {
     /* width: 1030px;
     overflow: scroll; */
 }
-.table-section tbody td{
+
+.table-section tbody td {
     text-align: center;
     font-size: 12px;
     padding: 10px 0px;
 }
-.table-section thead th{
+
+.table-section thead th {
     white-space: nowrap;
     font-size: 12px;
     font-weight: 500;
@@ -26,23 +28,23 @@
     border-right: 1px solid #fff;
     background: #fff !important;
 }
-.table-section 
-table{
+
+.table-section table {
     /* border-collapse: unset; */
 }
 
-.table-body-set label{
+.table-body-set label {
     position: relative;
     top: -2px;
 }
 
-.table-body-set input{
+.table-body-set input {
     padding: 3px;
     height: 12px;
     width: 12px;
 }
 
-.first-btn{
+.first-btn {
     border-radius: 10px;
     border: 1px solid #27004a;
     height: 44px;
@@ -50,130 +52,144 @@ table{
     color: #27004a;
     transition: all 0.3s linear;
 }
-.first-btn:hover{
+
+.first-btn:hover {
     background: #27004a;
     color: white;
 }
-.second-btn{
+
+.second-btn {
     border-radius: 10px;
-    background:  #27004a;
+    background: #27004a;
     padding: 0px 20px;
     color: white;
     height: 44px;
     transition: all 0.3s linear;
-    border: 1px solid #27004a  ;
+    border: 1px solid #27004a;
     white-space: nowrap;
 
-    
+
 }
-.second-btn:hover{
+
+.second-btn:hover {
     background: none;
     border: 1px solid #27004a;
-    color: #27004a;;
+    color: #27004a;
+    ;
 
 }
 
-*{
-    font-family: 'Poppins';}
+* {
+    font-family: 'Poppins';
+}
 
 
-    
-.tab-section .react-tabs .react-tabs__tab--selected{
+
+.tab-section .react-tabs .react-tabs__tab--selected {
     border-bottom: 1px solid #27004a !important;
     background: #27004a;
     border-radius: 7px;
 }
-.tab-section .react-tabs .react-tabs__tab--selected h2{
+
+.tab-section .react-tabs .react-tabs__tab--selected h2 {
     color: white;
 }
-    
-.tab-section .react-tabs{
+
+.tab-section .react-tabs {
     cursor: pointer;
     padding: 1px;
 }
-.tab-section .react-tabs .react-tabs__tab--selected:focus-visible{
+
+.tab-section .react-tabs .react-tabs__tab--selected:focus-visible {
     outline: none;
     border-bottom: 1px solid #511992;
     padding-bottom: 0px;
 }
-.tab-section .react-tabs .react-tabs__tab{
+
+.tab-section .react-tabs .react-tabs__tab {
     border-bottom: 1px solid transparent;
     padding-bottom: 0px;
     padding: 10px 6px 7px 6px;
 
 }
-.payroll-menus .react-tabs__tab{
+
+.payroll-menus .react-tabs__tab {
     padding: 7px 6px 7px 6px !important;
 
 }
 
-.payroll-menu::-webkit-scrollbar{
- display: none;
+.payroll-menu::-webkit-scrollbar {
+    display: none;
 }
- 
+
 .tab-section .react-tabs ::-webkit-scrollbar {
     width: 2px;
     height: 4px;
     display: none;
 }
-    
+
 .table-timing tbody tr::-webkit-scrollbar {
     width: 4px;
     height: 10px;
-  }
+}
+
 /* 
   .table-timing tbody tr:hover td{
     background: red;
   } */
 
- .table-timing tbody tr::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3); 
+.table-timing tbody tr::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
 }
-    
+
 
 .tab-section .react-tabs ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
 }
-                    
+
 .tab-section .react-tabs ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
 
-.sheet-icon{
+.sheet-icon {
     color: white;
     background: #27004a;
     border-radius: 5px;
     padding: 3px;
 }
-.get-icon{
+
+.get-icon {
     transition: all 0.3s linear !important;
 }
-.staff-icon{
+
+.staff-icon {
     color: #b1b1b1;
     height: 20px;
 }
-.react-tabs__tab--selected .staff-icon{
+
+.react-tabs__tab--selected .staff-icon {
     color: white !important;
 }
 
-@media screen and (max-width:992px){
+@media screen and (max-width:992px) {
     .sidebar {
-         left: -300px;
+        left: -300px;
         position: absolute;
         top: 63px;
         border-radius: 0px 10px 10px 0px;
-     }
-    .custom-body-class .sidebar{
+    }
+
+    .custom-body-class .sidebar {
         left: 0 !important;
         z-index: 999 !important;
-    }   
+    }
 }
 
-.sidebar{
+.sidebar {
     height: auto;
     min-height: 100vh;
     left: 0;
@@ -181,46 +197,50 @@ table{
     transition: all 0.3s linear;
 }
 
-.custom-body-class .admin-sidebar-set{
+.custom-body-class .admin-sidebar-set {
     width: 100% !important;
     /* transition: all 0.3s linear; */
     /* transition-delay: 5s; */
 }
-.custom-body-class .navbar{
+
+.custom-body-class .navbar {
     padding-left: 10px;
 }
 
 /* .set-z{
     z-index:-1;
 } */
- .ReactModal__Overlay{
+.ReactModal__Overlay {
     z-index: 22;
- }
+}
 
-.custom-body-class .sidebar{
+.custom-body-class .sidebar {
     left: -300px;
     z-index: 999;
     position: absolute;
-    
-    
+
+
 }
 
-.menu-icon-navbar{
+.menu-icon-navbar {
     display: none !important;
 }
- .cancel-icon{
-    display: block !important;
- }
- .custom-body-class .cancel-icon{
-    display: none !important;
- }
- .custom-body-class .menu-icon-navbar{
-    display: block !important;
- }
- 
 
-@media screen and (max-width:576px){
-    .search-icon{
+.cancel-icon {
+    display: block !important;
+}
+
+.custom-body-class .cancel-icon {
+    display: none !important;
+}
+
+.custom-body-class .menu-icon-navbar {
+    display: block !important;
+}
+
+
+@media screen and (max-width:576px) {
+    .search-icon {
         top: 15px;
     }
 }
@@ -229,37 +249,37 @@ table{
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Firefox */
 input[type=number] {
-  -moz-appearance: textfield;
+    -moz-appearance: textfield;
 }
 
-input[type=radio]{
-        accent-color: #8A25B0;
-   }
+input[type=radio] {
+    accent-color: #8A25B0;
+}
 
 
-.table-timing tbody tr td{
+.table-timing tbody tr td {
     padding: 5px 0px;
     font-size: 13px;
-   }
+}
 
-   .modal-field{
+.modal-field {
     height: 400px;
     overflow: scroll;
-   }
+}
 
-   /* .fixed-tab-section .react-tabs__tab--selected input{
+/* .fixed-tab-section .react-tabs__tab--selected input{
         accent-color: red;
    } */
-   
-.tabs-attendance .react-tabs .react-tabs__tab--selected{
+
+.tabs-attendance .react-tabs .react-tabs__tab--selected {
     border-radius: 10px;
-     padding: 0px 20px;
+    padding: 0px 20px;
     color: white;
     height: 44px;
     transition: all 0.3s linear;
@@ -268,9 +288,10 @@ input[type=radio]{
     display: flex;
     background: white !important;
     color: #27004a !important;
+    transition: all 0.3s linear;
 }
 
-.tabs-attendance .react-tabs .react-tabs__tab{
+.tabs-attendance .react-tabs .react-tabs__tab {
     border-radius: 10px;
     background: #27004a;
     padding: 0px 20px;
@@ -281,42 +302,46 @@ input[type=radio]{
     white-space: nowrap;
     display: flex;
 }
-.add-icon{
+
+.add-icon {
     /* font-size: 16px !important; */
 }
 
-.arrow-icon{
+.arrow-icon {
     font-weight: 500;
 }
-.field-modal{
+
+.field-modal {
     height: 100% !important;
 }
-.sidelinks .active{
+
+.sidelinks .active {
     background-color: #f0f8fd;
     border-radius: 10px;
     color: #27004a;
 }
 
-.edit-sidebar{
-    transition: all 0.3s linear;
-}
 /* .toggle-btn-side{
     display: none;
 } */
- .menu-icon{
-    display: none !important;
- }
-.close-icon{
-    display: block !important; 
-    transition: all 0.3s linear;
-}
-.editsidebar .close-icon{
+.menu-icon {
     display: none !important;
 }
-.editsidebar .menu-icon{
+
+.close-icon {
     display: block !important;
     transition: all 0.3s linear;
 }
+
+.editsidebar .close-icon {
+    display: none !important;
+}
+
+.editsidebar .menu-icon {
+    display: block !important;
+    transition: all 0.3s linear;
+}
+
 /* .ReactModal__Content {
     transform:rotateY(75deg);
     transition: all 0.3s linear;
@@ -324,7 +349,7 @@ input[type=radio]{
 .ReactModal__Body--open .ReactModal__Content{
     transform:rotateY(0deg);
 } */
-.calender-icon{
+.calender-icon {
     color: #27004a;
     background: #f1efef;
     padding: 4px;
@@ -332,112 +357,134 @@ input[type=radio]{
     font-size: 29px !important;
 }
 
-.arrow-icon-back{
+.arrow-icon-back {
     color: #8A25B0;
     cursor: pointer;
 }
-.react-datepicker-wrapper{
+
+.react-datepicker-wrapper {
     width: 100%;
 }
-.user-img img{
+
+.user-img img {
     background-color: white;
     box-shadow: 0px 0px 5px grey;
     cursor: pointer;
     transition: all 0.3s linear;
 }
-.user-img img:hover{
+
+.user-img img:hover {
     transform: translateY(-4px);
     box-shadow: 0px 0px 5px #6b6868;
-    
+
 }
-.day-table{
+
+.day-table {
     /* border: 1px solid red; */
 }
-.day-table thead th{
-    font-weight: 400; 
-     padding: 10px 0px;
-    color: rgb(22, 21, 21);;
+
+.day-table thead th {
+    font-weight: 400;
+    padding: 10px 0px;
+    color: rgb(22, 21, 21);
+    ;
     padding-right: 10px;
     padding-bottom: 0;
     white-space: nowrap;
 }
-.day-table thead th:last-child{
+
+.day-table thead th:last-child {
     border-bottom: none;
 }
-.day-table thead{
+
+.day-table thead {
     display: flex;
     flex-direction: column;
-     border-right: 1px solid #dfd1d1;
+    border-right: 1px solid #dfd1d1;
 }
-.day-table tbody tr{
+
+.day-table tbody tr {
     border-bottom: 1px solid #dfd1d1;
     width: 100%;
 }
+
 .day-table tbody tr {
     height: 35px;
 }
+
 .day-table tbody tr td {
     display: block;
     width: 100%;
     height: 100%;
     padding-left: -5px;
 }
-.day-table tbody tr td a{
+
+.day-table tbody tr td a {
     display: block;
     height: 100%;
 }
-.weekly-table tbody tr td{
+
+.weekly-table tbody tr td {
     width: 150px;
     border-right: 1px solid #dfd1d1;
 
 }
-.set-shadow{
-    box-shadow: 0px 1px 4px 0px rgba(10,1,10,0.16);
+
+.set-shadow {
+    box-shadow: 0px 1px 4px 0px rgba(10, 1, 10, 0.16);
 }
-.arrow-icon-sidebar{
+
+.arrow-icon-sidebar {
     font-size: 14px !important;
 }
-.new-shadow{
+
+.new-shadow {
     box-shadow: 0px 0px 5px #d0d0d0;
 }
 
 
 
 
-.table-status thead th{
+.table-status thead th {
     white-space: nowrap;
     font-weight: 500;
     font-size: 12px;
 }
-.table-status tbody td{
+
+.table-status tbody td {
     white-space: nowrap;
     font-size: 14px;
     padding: 14px;
     text-align: center;
 }
-.main-table-status{
+
+.main-table-status {
     overflow: scroll;
 }
 
-.stdropdown-container{
+.stdropdown-container {
     border: 1px solid #d9d9d9;
     border-radius: 7px;
     /* display: flex; */
     font-size: 10px;
     position: relative;
- 
+
 }
-.role-setup{
+
+.role-setup {
     margin-top: 29px !important;
 }
-.stsearch-box{
+
+.stsearch-box {
     display: flex;
     padding: 8px;
 }
-.stsearch-box input:focus{
+
+.stsearch-box input:focus {
     outline: none;
 }
-.stdropdown-menu{
+
+.stdropdown-menu {
     position: absolute;
     border: 1px solid #d9d9d9;
     border-radius: 5px;
@@ -454,61 +501,65 @@ input[type=radio]{
 
 
 
+.edit-sidebar {
+    left: 0;
+}
 
 
-
-@media screen and (max-width:1280px){
-    .edit-sidebar{
+@media screen and (max-width:1280px) {
+    .edit-sidebar {
         left: 0px;
-        
+
     }
-    .toggle-btn-side{
+
+    .toggle-btn-side {
         display: block;
 
     }
 
-    .editsidebar .edit-sidebar{
-        left: 0px;
+    .editsidebar .edit-sidebar {
+        left: -300px;
     }
 }
 
 
 
 
-.total-staff-salary{
+.total-staff-salary {
     border-right: 1px solid #cec6c6 !important;
-     padding-right: 15px;
+    padding-right: 15px;
 
- }
-
-
- .calender-div table thead button {
-        width: 155px;
-        text-align: center; 
-        border-right: 1px solid #eae8e8;
-        padding: 30px ;
-        align-items: center;
-       
- }
-
- .calender-div table tbody button {
-    width: 155px;
-    text-align: center; 
-    border-right: 1px solid #eae8e8;
-    padding: 30px ;
-    align-items: center;
-   
 }
 
-.calender-div table tbody button p{
+
+.calender-div table thead button {
+    width: 155px;
+    text-align: center;
+    border-right: 1px solid #eae8e8;
+    padding: 30px;
+    align-items: center;
+
+}
+
+.calender-div table tbody button {
+    width: 155px;
+    text-align: center;
+    border-right: 1px solid #eae8e8;
+    padding: 30px;
+    align-items: center;
+
+}
+
+.calender-div table tbody button p {
     font-size: 12px;
 }
-.calender-div table tbody td{
+
+.calender-div table tbody td {
     padding: 0;
     border-top: 1px solid #dddddd;
 }
 
- .calender-div table thead button:last-child {
+.calender-div table thead button:last-child {
     border-right: none;
 }
 
@@ -516,99 +567,110 @@ input[type=radio]{
 .calender-div table tbody td:last-child button {
     border-right: none;
 }
-.calender-div table thead button th{
+
+.calender-div table thead button th {
     font-weight: 500;
     color: grey;
     font-size: 13px;
 }
 
 
-.calender-div table thead a td{
+.calender-div table thead a td {
     font-size: 12px;
 }
-.calender-icon-tab{
+
+.calender-icon-tab {
     color: #8A25B0;
 }
-.calender .react-tabs .react-tabs__tab--selected svg{
-        background: #dddddd;
-        border-radius: 3px;
-        padding: 3px;
+
+.calender .react-tabs .react-tabs__tab--selected svg {
+    background: #dddddd;
+    border-radius: 3px;
+    padding: 3px;
 }
-.event-modal .react-tabs .react-tabs__tab{
+
+.event-modal .react-tabs .react-tabs__tab {
     padding: 5px 20px;
     border: 1px solid #8A25B0;
     color: #8A25B0;
     border-radius: 10px;
     cursor: pointer;
 }
-.sell-icon{
+
+.sell-icon {
     font-size: 17px !important;
 }
-.tag-input{
+
+.tag-input {
     border-left: 1px dashed black;
     padding-left: 4px;
 }
 
-.plus-icon{
+.plus-icon {
     position: absolute;
     right: 10px;
     top: 10px;
 }
 
-.event-modal .react-tabs .react-tabs__tab--selected{
+.event-modal .react-tabs .react-tabs__tab--selected {
     background: #8A25B0;
     color: white;
 }
 
-.arrow-down{
+.arrow-down {
     font-size: 14px !important;
 }
-.filter-icon{
+
+.filter-icon {
     font-weight: normal;
     font-size: 20px !important;
     margin-left: 10px;
 }
-.upload-icon{
+
+.upload-icon {
     font-size: 20px;
 }
-.warning-icon{
-    animation: moveup 3s linear  infinite alternate ;
+
+.warning-icon {
+    animation: moveup 3s linear infinite alternate;
     font-size: 36px !important;
 }
 
 @keyframes moveup {
-    0%{
+    0% {
         transform: scale(1);
     }
-    100%{
+
+    100% {
         transform: scale(1.4);
     }
 }
 
-@media screen and (max-width:768px){
-    .total-staff-salary{
+@media screen and (max-width:768px) {
+    .total-staff-salary {
         border-right: none !important;
         padding-right: 0;
     }
 }
 
 
-   @media(max-width:576px){
-    .first-btn{
+@media(max-width:576px) {
+    .first-btn {
         height: 35px;
         padding: 0px 10px;
         font-size: 10px;
     }
-    .second-btn{
+
+    .second-btn {
         height: 35px;
         padding: 13px 24px;
         font-size: 12px;
         display: flex;
         align-items: center;
     }
-   }
+}
 
-.arrow-back-icon{
+.arrow-back-icon {
     background: #27004a;
     color: white;
     padding: 3px;
@@ -616,18 +678,26 @@ input[type=radio]{
     font-size: 25px;
 }
 
-.role-row th{
-    background:  none !important;
+.role-row th {
+    background: none !important;
 }
 
+.edit-sidebar {
+    transition: all 0.3s linear;
+}
+.editsidebar .edit-sidebar {
+    transition: all 0.3s linear;
 
-   @media(max-width:992px){
-    .sidebar{
+}
+
+@media(max-width:992px) {
+    .sidebar {
         left: -100%;
         z-index: 99;
     }
-    .admin-sidebar-set{
+
+    .admin-sidebar-set {
         width: 100%;
         position: absolute;
     }
-   }
+}
