crm ui role detail page set team meeting by tp sir Department detail page set task page click on new task button open modal set Client page click on new client btn set the page and use the navigate Client page click on new client btn set the page and use the navigate

--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -280,6 +280,9 @@
     border-radius: 10px;
     font-size: 14px;
 }
+.roll-name{
+    border-right: 1px solid #dbdbbd !important;
+}
 .allcrm-btn:hover{  
     transition: all 0.3s linear;
     background: none;
@@ -329,6 +332,7 @@
     border-bottom: 1px solid #ebf1f5 !important;
     padding: 10px !important;
 }
+
 
 
 .tablehead{
