No Internet Staff page all tables same and renew Task page Project page and client page add to do buttons in all tables staff page all pages modal renew and set sidebar changes sidebar click on setup button open the new sidebar all status main pages table renew

--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -284,6 +284,9 @@
 .roll-name{
     border-right: 1px solid #dbdbbd !important;
 }
+.allarrow-verify{
+    font-size: 18px !important;
+}
 .allcrm-btn:hover{  
     transition: all 0.3s linear;
     background: none;
@@ -327,6 +330,10 @@
     color: white;
     border-radius: 50px;
     padding: 4px 8px;
+    height: 24px;
+}
+.newtab-staff{
+    border-bottom: 2px solid #dbdbdb !important;
 }
 
 .preferences{
