--- a/src/Assets/css/roledetail.css
+++ b/src/Assets/css/roledetail.css
@@ -17,7 +17,7 @@
 .table-section tbody td {
     text-align: center;
     font-size: 12px;
-    padding: 10px 0px;
+    padding: 10px;
 }
 
 .table-section thead th {
@@ -25,7 +25,7 @@
     font-size: 12px;
     font-weight: 500;
     padding: 10px 24px;
-    border-right: 1px solid #fff;
+    border-right: 1px solid #dbdbdb;
     background: #fff !important;
 }
 .table-section1 thead th{
@@ -59,7 +59,7 @@
 .first-btn {
     border-radius: 10px;
     border: 1px solid #27004a;
-    height: 44px;
+    height: 40px;
     padding: 0px 20px;
     color: #27004a;
     transition: all 0.3s linear;
@@ -460,14 +460,12 @@ input[type=radio] {
 
 .table-status tbody td {
     white-space: nowrap;
-    font-size: 14px;
-    padding: 14px;
+    font-size: 12px;
+    padding: 10px;
     text-align: center;
 }
 
-.main-table-status {
-    overflow: scroll;
-}
+
 
 .stdropdown-container {
     border: 1px solid #d9d9d9;
