meeting staff page modals set & all extra scroll bar removes run payroll update status manager all tables same in client project & task

--- a/src/Assets/css/new.css
+++ b/src/Assets/css/new.css
@@ -644,7 +644,13 @@
     .set-workd{
         justify-content: center;
     }
+    .staff-page-res{
+        right: -99px !important;
+
+    }
+
 }
+
 
 
 .transition-body {
@@ -659,3 +665,7 @@
 .all-btns-crm{
     transition: all 0.5s linear !important;
 }  
+
+.custom-border{
+    border: #000 1px solid !important;
+}
